[package]
name = "tron_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
tower = {version = "*"}
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
tracing = "0.1.40"
serde_json = "1.0.115"
tower-sessions = "0.12.0"
time = "0.3.30"
tokio-stream = "0.1.15"
futures-util = "0.3.30"
tron_components = { path = "../tron_components" }
tron_utils = { path = "../tron_utils" }
reqwest = { version = "0.12.4", features = ["json"] }
jsonwebtoken = "9.3.0"
