[package]
name = "tron_components"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
futures-util = "0.3.30"
rand = "0.8.5"
serde = { verison = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tron_macro = { path = "../tron_macro"}
bytes = "1.6.0"
uuid = { version = "1.8.0", features = ["v4"] }
tron_utils = { path = "../tron_utils" }
tracing = "0.1.40"
