[package]
name = "tron_components"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
axum = "0.8.1"
async-trait = "0.1.83"
futures-util = "0.3.30"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tron_macro = { path = "../tron_macro"}
bytes = "1.7.1"
uuid = { version = "1.10.0", features = ["v4"] }
tron_utils = { path = "../tron_utils" }
tracing = "0.1.40"
askama = "0.12.1"