[package]
name = "tron_example_02"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
serde_json = "1.0.115"
futures-util = "0.3.30"
tron_components = { path = "../tron_components" }
tron_app = {path = "../tron_app"}
base64 = "0.22.0"
askama = "0.12.1"
uuid = { version = "1.8.0", features = ["v4"] }
