[package]
name = "tron_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
tower = {version = "*"}
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
tracing = "0.1.40"
serde_json = "1.0.115"
tower-sessions = "0.12.0"
time = "0.3.30"
tokio-stream = "0.1.15"
futures-util = "0.3.30"
base64 = "0.22.0"
uuid = "1.8.0"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"]}
http = "1.1.0"
tungstenite = "0.21.0"
bytes = "1.6.0"
anyhow = "1.0.81"
lazy_static = "1.4.0"
tron_components = { path = "../tron_components" }
