[package]
name = "tron_widgets"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", feature = ["multipart"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
serde_json = "1.0.128"
futures-util = "0.3.30"
tron_app = {path = "../../tron_app"}
askama = "0.12.1"
futures = "0.3.30"
