[package]
name = "conversational_bot"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
serde_json = "1.0.115"
futures-util = "0.3.30"
tron_app = {path = "../../tron_app"}
askama = "0.12.1"
uuid = { version = "1.8.0", features = ["v4"] }
bytes = "1.6.0"
lazy_static = "1.4.0"
tokio-stream = "0.1.15"
# anyhow = "1.0.82"
url = "2.5.0"
futures = "0.3.30"
http = "1.1.0"
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
rand = "0.8.5"
data-encoding = "2.5.0"
thiserror = "1.0.59"
reqwest = "0.12.4"
async-openai = "0.24.0"
time = "0.3.30"
memory-stats = "1.1.0"
# console-subscriber = "0.2.0"
tikv-jemallocator = { version = "0.6.0" }
