[package]
name = "rag_map"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
serde_json = "1.0.128"
futures-util = "0.3.30"
futures = "0.3.30"
#tron_components = { path = "../../tron_components" }
tron_app = {path = "../../tron_app"}
askama = "0.12.1"
bytes = "1.7.1"
flate2 = "1.0.33"
tower-sessions = "0.14.0"
once_cell = "1.19.0"
ordered-float = { version = "4.2.0", default-features = false }
async-openai = "0.26.0"
candle-transformers = "0.8.1"
anyhow = "1.0.86"
candle-core = "0.8.1"
tokenizers = "0.21.0"
candle-nn = { version = "0.8.1", features = ["metal"] }
hf-hub = "0.4.1"
