[package]
name = "plotting"
version.workspace = true
authors.workspace = true
descriptionn.workspace = true
edition.workspace = true

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
serde_json = "1.0.115"
futures-util = "0.3.30"
#tron_components = { path = "../../tron_components" }
tron_app = {path = "../../tron_app"}
askama = "0.12.1"
bytes = "1.6.0"
