[package]
name = "image_gs"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
serde_json = "1.0.115"
futures-util = "0.3.30"
futures = "0.3.30"
#tron_components = { path = "../../tron_components" }
tron_app = {path = "../../tron_app"}
askama = "0.12.1"
bytes = "1.6.0"
flate2 = "1.0.30"
tower-sessions = "0.14.0"
once_cell = "1.19.0"
ordered-float = { version = "4.2.0", default-features = false }
async-openai = "0.26.0"
candle-transformers = "0.8.1"
anyhow = "1.0.86"
candle-core = "0.8.1"
tokenizers = "0.21.0"
candle-nn = { version = "0.8.1", features = ["metal"] }
hf-hub = "0.4.1"
candle-datasets = "0.8.1"
image = { version = "0.25.0", default-features = false, features = ["jpeg", "png"] }
imageproc = { version = "0.25.0", default-features = false }
data-encoding = "2.6.0"
rayon = "1.10.0"
# rand = "0.8.5"